k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "nginx-web-ip"
    networking.gke.io/managed-certificates: "nginx-managed-cert"
spec:
  rules:
    - host: testing.1122.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-proxy-service
                port:
                  number: 80
